--- a/C+++/Classes/Main.storyboard
+++ b/C+++/Classes/Main.storyboard
@@ -1218,14 +1218,59 @@ Gw
                                                                     </textFieldCell>
                                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                                     <prototypeCellViews>
+                                                                        <tableCellView identifier="File" id="kfW-Mm-jUT" customClass="CDRecentFilesTableCellView" customModule="C___" customModuleProvider="target">
+                                                                            <rect key="frame" x="10" y="0.0" width="178" height="51"/>
+                                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                            <subviews>
+                                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="9Oy-aN-6TP">
+                                                                                    <rect key="frame" x="37" y="27" width="140" height="16"/>
+                                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="File Name" id="wqf-zY-onf">
+                                                                                        <font key="font" metaFont="systemMedium" size="13"/>
+                                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                                                    </textFieldCell>
+                                                                                </textField>
+                                                                                <imageView wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yic-Pf-MXH">
+                                                                                    <rect key="frame" x="3" y="8" width="31" height="35"/>
+                                                                                    <constraints>
+                                                                                        <constraint firstAttribute="height" constant="35" id="8Ks-V6-4Rl"/>
+                                                                                        <constraint firstAttribute="width" constant="31" id="nPv-EW-gwD"/>
+                                                                                    </constraints>
+                                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NewFile" id="WSp-SW-KQm"/>
+                                                                                </imageView>
+                                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ANY-b0-rAb">
+                                                                                    <rect key="frame" x="37" y="8" width="140" height="15"/>
+                                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" title="Path" id="OxS-ZI-sm4">
+                                                                                        <font key="font" metaFont="cellTitle"/>
+                                                                                        <color key="textColor" name="LineNumberColor"/>
+                                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                                                    </textFieldCell>
+                                                                                </textField>
+                                                                            </subviews>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="trailing" secondItem="9Oy-aN-6TP" secondAttribute="trailing" constant="3" id="JzJ-EX-mKz"/>
+                                                                                <constraint firstItem="9Oy-aN-6TP" firstAttribute="leading" secondItem="Yic-Pf-MXH" secondAttribute="trailing" constant="5" id="RXw-eq-2MW"/>
+                                                                                <constraint firstItem="Yic-Pf-MXH" firstAttribute="top" secondItem="kfW-Mm-jUT" secondAttribute="top" constant="8" id="Rer-yz-YbK"/>
+                                                                                <constraint firstAttribute="trailing" secondItem="ANY-b0-rAb" secondAttribute="trailing" constant="3" id="Wxt-jN-oqT"/>
+                                                                                <constraint firstItem="Yic-Pf-MXH" firstAttribute="leading" secondItem="kfW-Mm-jUT" secondAttribute="leading" constant="3" id="inh-TK-93x"/>
+                                                                                <constraint firstItem="ANY-b0-rAb" firstAttribute="leading" secondItem="Yic-Pf-MXH" secondAttribute="trailing" constant="5" id="mIU-7h-kyh"/>
+                                                                                <constraint firstItem="9Oy-aN-6TP" firstAttribute="top" secondItem="kfW-Mm-jUT" secondAttribute="top" constant="8" id="qfQ-NN-XKg"/>
+                                                                                <constraint firstAttribute="bottom" secondItem="ANY-b0-rAb" secondAttribute="bottom" constant="8" id="rcd-jk-HPZ"/>
+                                                                            </constraints>
+                                                                            <connections>
+                                                                                <outlet property="imageView" destination="Yic-Pf-MXH" id="Vjg-ya-eoz"/>
+                                                                                <outlet property="pathLabel" destination="ANY-b0-rAb" id="eT9-gg-g90"/>
+                                                                                <outlet property="textField" destination="9Oy-aN-6TP" id="06l-dP-AMs"/>
+                                                                            </connections>
+                                                                        </tableCellView>
                                                                         <tableCellView identifier="Snippet" id="l9h-Xv-E9p">
-                                                                            <rect key="frame" x="10" y="0.0" width="178" height="41"/>
+                                                                            <rect key="frame" x="10" y="51" width="178" height="41"/>
                                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                             <subviews>
                                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XJK-Zo-0vV">
                                                                                     <rect key="frame" x="40" y="13" width="138" height="16"/>
                                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="For Statement" id="G9h-NB-U7y">
+                                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Code Snippet Title" id="G9h-NB-U7y">
                                                                                         <font key="font" usesAppearanceFont="YES"/>
                                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1242,37 +1287,14 @@ Gw
                                                                                 <outlet property="textField" destination="XJK-Zo-0vV" id="0xS-yr-0v1"/>
                                                                             </connections>
                                                                         </tableCellView>
-                                                                        <tableCellView identifier="File" id="kfW-Mm-jUT">
-                                                                            <rect key="frame" x="10" y="41" width="178" height="41"/>
-                                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                                            <subviews>
-                                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Oy-aN-6TP">
-                                                                                    <rect key="frame" x="40" y="13" width="138" height="16"/>
-                                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="a.cpp" id="wqf-zY-onf">
-                                                                                        <font key="font" usesAppearanceFont="YES"/>
-                                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                                                    </textFieldCell>
-                                                                                </textField>
-                                                                                <imageView wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yic-Pf-MXH">
-                                                                                    <rect key="frame" x="3" y="3" width="31" height="35"/>
-                                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="WSp-SW-KQm"/>
-                                                                                </imageView>
-                                                                            </subviews>
-                                                                            <connections>
-                                                                                <outlet property="textField" destination="9Oy-aN-6TP" id="06l-dP-AMs"/>
-                                                                            </connections>
-                                                                        </tableCellView>
                                                                         <tableCellView identifier="Diagnostics" id="hJM-HB-9u9">
-                                                                            <rect key="frame" x="10" y="82" width="178" height="41"/>
+                                                                            <rect key="frame" x="10" y="92" width="178" height="41"/>
                                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                             <subviews>
                                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Eki-e9-tcc">
                                                                                     <rect key="frame" x="40" y="13" width="138" height="16"/>
                                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Warning: You AK IOI" id="0Fv-9h-JOx">
+                                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Diagnostics" id="0Fv-9h-JOx">
                                                                                         <font key="font" usesAppearanceFont="YES"/>
                                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1285,6 +1307,7 @@ Gw
                                                                                 </imageView>
                                                                             </subviews>
                                                                             <connections>
+                                                                                <outlet property="imageView" destination="9Ra-eK-tZY" id="EKy-Cs-LH7"/>
                                                                                 <outlet property="textField" destination="Eki-e9-tcc" id="QC5-FJ-V1J"/>
                                                                             </connections>
                                                                         </tableCellView>
@@ -2289,6 +2312,7 @@ Gw
         <image name="NSTouchBarHistoryTemplate" width="15" height="13"/>
         <image name="NSTouchBarPlayTemplate" width="12" height="11"/>
         <image name="NSTouchBarSearchTemplate" width="14" height="13"/>
+        <image name="NewFile" width="1320" height="1320"/>
         <image name="Run" width="256" height="256"/>
         <image name="Settings" width="610" height="610"/>
         <image name="Stop" width="300" height="300"/>
@@ -2299,6 +2323,9 @@ Gw
         </namedColor>
         <namedColor name="LaunchVCSideBarColor">
             <color red="0.89999997615814209" green="0.89999997615814209" blue="0.89999997615814209" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+        <namedColor name="LineNumberColor">
+            <color red="0.30000001192092896" green="0.30000001192092896" blue="0.30000001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
