--- a/C+++/Classes/Main.storyboard
+++ b/C+++/Classes/Main.storyboard
@@ -611,7 +611,7 @@
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController storyboardIdentifier="Document Window Controller" id="jGA-0Y-lOj" customClass="CDMainWindowController" customModule="C___" customModuleProvider="target" sceneMemberID="viewController">
-                    <window key="window" identifier="Document Window Controller" title="C+++" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" tabbingMode="preferred" titlebarAppearsTransparent="YES" toolbarStyle="compact" titleVisibility="hidden" id="Ckk-yw-fiv" customClass="CDMainWindow" customModule="C___" customModuleProvider="target">
+                    <window key="window" identifier="Document Window Controller" title="C+++" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" tabbingMode="disallowed" titlebarAppearsTransparent="YES" toolbarStyle="compact" titleVisibility="hidden" id="Ckk-yw-fiv" customClass="CDMainWindow" customModule="C___" customModuleProvider="target">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" fullSizeContentView="YES"/>
                         <windowCollectionBehavior key="collectionBehavior" fullScreenAuxiliary="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
@@ -1429,14 +1429,14 @@ Gw
                                                                             <rect key="frame" x="0.0" y="558" width="122" height="516"/>
                                                                             <autoresizingMask key="autoresizingMask"/>
                                                                             <subviews>
-                                                                                <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KOZ-rV-tj2" customClass="CDMinimapScrollerView" customModule="C___" customModuleProvider="target">
-                                                                                    <rect key="frame" x="0.0" y="420" width="122" height="96"/>
-                                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                                </customView>
                                                                                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kvu-Qy-keC">
                                                                                     <rect key="frame" x="0.0" y="0.0" width="122" height="516"/>
                                                                                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="top" imageScaling="proportionallyUpOrDown" id="m7V-ih-UOi"/>
                                                                                 </imageView>
+                                                                                <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KOZ-rV-tj2" customClass="CDMinimapScrollerView" customModule="C___" customModuleProvider="target">
+                                                                                    <rect key="frame" x="0.0" y="420" width="122" height="96"/>
+                                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                                                </customView>
                                                                             </subviews>
                                                                             <constraints>
                                                                                 <constraint firstItem="Kvu-Qy-keC" firstAttribute="leading" secondItem="Lo4-51-TBQ" secondAttribute="leading" id="J4a-7N-Hzu"/>
@@ -1446,7 +1446,6 @@ Gw
                                                                             </constraints>
                                                                             <connections>
                                                                                 <outlet property="imageView" destination="Kvu-Qy-keC" id="HTD-zH-fLl"/>
-                                                                                <outlet property="scrollView" destination="vGI-3r-Mbu" id="Whf-Ju-SYH"/>
                                                                                 <outlet property="scrollerView" destination="KOZ-rV-tj2" id="J7p-Gh-2td"/>
                                                                             </connections>
                                                                         </view>
