--- a/C+++/Classes/Luogu/CDLuoguLoginViewController.xib
+++ b/C+++/Classes/Luogu/CDLuoguLoginViewController.xib
@@ -8,6 +8,10 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="CDLuoguLoginViewController" customModule="C___" customModuleProvider="target">
             <connections>
+                <outlet property="captchaImageButton" destination="ryH-ml-Thf" id="bk1-gL-Fs5"/>
+                <outlet property="captchaTextField" destination="BI4-5N-AMU" id="29f-YW-kDU"/>
+                <outlet property="passwordTextField" destination="E0N-wq-ZHG" id="AsU-5m-S5M"/>
+                <outlet property="usernameTextField" destination="Owv-el-WZO" id="sKZ-YA-fyq"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
@@ -89,6 +93,38 @@
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
+                    <connections>
+                        <action selector="login:" target="-2" id="Xey-1Q-LlT"/>
+                    </connections>
+                </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="icx-x2-Z7I">
+                    <rect key="frame" x="20" y="57" width="55" height="16"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textFieldCell key="cell" lineBreakMode="clipping" title="Captcha" id="jng-KU-VWz">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BI4-5N-AMU">
+                    <rect key="frame" x="92" y="54" width="157" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="The text you see" drawsBackground="YES" id="fih-AJ-H5t">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ryH-ml-Thf">
+                    <rect key="frame" x="263" y="55" width="89" height="37"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="aYm-zu-Fwy">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="changeCaptcha:" target="-2" id="5dI-qC-OVL"/>
+                    </connections>
                 </button>
             </subviews>
             <constraints>
